# ris

devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/exercise3/: map_goals  map_goals0  map_goals2  map_goals_auto  map_goals_hardcoded  map_goals_original
devel/lib/pkgconfig/: exercise3.pc  exercise4.pc
devel/share/exercise3/cmake/: exercise3Config.cmake
devel/share/exercise4/cmake/: exercise4Config.cmake
src/exercise3/: CMakeLists.txt
src/exercise3/launch/: amcl_simulation.launch
src/exercise3/maps/: first_map.pgm  first_map.yaml  second_map.pgm  second_map.yaml  third_map.pgm  third_map.yaml
src/exercise3/src/: map_goals.cpp  map_goals2.cpp  map_goals_auto.cpp  map_goals_hardcoded.cpp  map_goals_original.cpp
src/exercise4/: CMakeLists.txt
src/exercise4/scripts/: breadcrumbs  face_localizer_dnn
